--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </button>
       </div>
 
-      <div id="hour-15" class="row time-block future">
+      <div id="15" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -100,7 +100,7 @@
         </button>
       </div>
 
-      <div id="hour-16" class="row time-block future">
+      <div id="16" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -108,7 +108,7 @@
         </button>
       </div>
 
-      <div id="hour-17" class="row time-block future">
+      <div id="17" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -116,7 +116,7 @@
         </button>
       </div>
 
-      <div id="hour-18" class="row time-block future">
+      <div id="18" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
